--- a/mattermost/main/resources/files/acme-renew.conf
+++ b/mattermost/main/resources/files/acme-renew.conf
@@ -1,4 +1,4 @@
 MAILTO=''
 PATH=/usr/sbin:/usr/bin:/sbin:/bin
 SHELL=/bin/bash
-0 0,12 * * * root sleep "$(shuf -i 0-3600 -n 1)" && certbot certonly --dns-route53 -n -m '${EMAIL}' --post-hook '/usr/bin/systemctl reload nginx' --agree-tos -d '${DOMAIN}' >> /var/log/acme-renew.log 2>&1
+0 0,12 * * * root sleep "$(shuf -i 0-3600 -n 1)" && certbot certonly --dns-route53 -n -m '${EMAIL}' --post-hook '/usr/bin/systemctl reload nginx' --agree-tos -d '${DOMAIN},origin.${AWS::StackName}.${DOMAIN}' >> /var/log/acme-renew.log 2>&1
